--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,12 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-  
-  <%= render 'layouts/nav' %>
 
   <body>
-  <%= yield %>
+  <%= render 'layouts/nav' %>
+
+  <div class="container">
+    <%= yield %>
+  </div>
   </body>
 </html>
